# goit-python

lesson10/: HW10.py
lesson11/: HW11.py
lesson12/: HW_12_main.py  classes.py
lesson3/: hw3.py
lesson4/: HW4.py
lesson5/: HW5.py
lesson6/: HW6.py
lesson7/clean_folder/: LICENSE  README.md  setup.cfg  setup.py
lesson8/: HW8.py
lesson9/: HW_9.py
