[metadata]
# replace with your username:
name = clean_package_misha_sid
version = 1.0.0
author = Misha Sid
author_email = mishasydorchuk@gmail.com
description = Sort the folder identified by its Window path
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = clean_folder
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src